Make sure sup and sub elements don't effect line spacing in footnotes

--- a/themes/quire-starter-theme/source/css/components/quire-page.scss
+++ b/themes/quire-starter-theme/source/css/components/quire-page.scss
@@ -386,7 +386,7 @@ html {
           hr {
             display: none;
           }
-          * {
+          *:not(sup):not(sub) {
             line-height: 1.6em;
           }
           @if $theme == classic {
